# Brainer

./: .gitignore  AGENTS.md  AGENT_INSTALL.md  AGENT_ONBOARDING.md  CLAUDE.md  GEMINI.md  GOAL.md  INSPIRATION.md  INSTALL.md  INSTALL.sh  L1_index.md  Makefile  PLAN-cbm-adoption.md  README.md  REVIEW-SUMMARY-cognee-adoption.md  ROADMAP.md  index.md  install.sh  log.md  pyproject.toml  start.md
.claude-plugin/: marketplace.json
.codex/: hooks.json
.gemini/: settings.json
.github/: secret_scanning.yml
L4_archive/: 2026-04-24-summ-codex-manual.md
concepts/: prefix-caching.md
docs/: ADDING_A_SKILL.md  ANTIGRAVITY_SUPPORT.md  AUDIT_MODES_ROADMAP.md  CROSS_PLATFORM_REMEDIATION_PLAN.md  GENERATED_FILES.md  HOST_CAPABILITY_MATRIX.md  INSTALL_SAFETY.md  MEMORY_MODEL.md  MODEL_UPGRADE_RETEST.md  PROVENANCE.md  RECONCILE-screenery-lean-2026-07-21.md  SKILLS_EFFECTIVENESS_VERIFICATION.md  TARGET_ARCHITECTURE.md  TESTING_SKILLS.md  adversarial-review-harmful-skills-audits-2026-07-17.md  brainer-learning-failures-2026-07-06.md  brainer-skills-deep-review-2026-07-10.md  skill-purpose-audit-2026-07-19.md
eval/: BASELINE_2026-06-12.md  CONFLICT_AUDIT.md  FINDINGS.md  INSTRUCTION_EFFICACY.md  LIVE_OBSERVATION_REGISTER.md  MEASUREMENT_QUEUE.md  README.md  RETEST_RESULTS.md  SIBLING_PROPAGATION_PLAN.md  SIMULATIONS.md  TEST_METHODS_DESIGN_2026-06-13.md  ablation.py  behavioral.py  build_rated_index.py  finalize.sh  gains.py  inert_probe.py  judge.py  kaggle.md  kaggle_notebook.py  populate_eval_md.py  requirements.txt  run_actionable_batch.sh  run_full_batch.sh  runner.py  (+18 more)
(+1109 files in other folders)
