[project]
name = "brainer"
version = "0.0.0"
description = "Portable agent skills, host carriers, and drift checks."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
